# fast_life

./: 2c5-spaceship-gun-p416.txt  CMakeLists.txt  README.md  a.out  game.cpp  game.hpp  gl_utils.cpp  gl_utils.hpp  output.asm  queen_bee.txt  smaller-ship.txt  video.c
rle_files/: oscillator.txt
